--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="1896" MadCap:lastWidth="958" class="HomePage" style="mc-master-page: url('Resources\MasterPages\HomePage.flmsp');">
     <head>
         <link href="Resources/Stylesheets/StylesForHomePage.css" rel="stylesheet" type="text/css" />
@@ -19,7 +19,8 @@
         <div class="slidingshow">
             <MadCap:slideshow MadCap:SlidesDisplayed="3" MadCap:AdaptiveHeight="True" MadCap:Navigation="None" MadCap:ShowCaptions="True">
                 <MadCap:slide title="Getting Started">
-                    <p><a href="A_Getting Started/Getting Started.htm"><img src="Resources/Images/KeyFeatures.png" alt="" class="Slideshow" /></a>
+                    <p>
+                        <img src="Resources/Images/KeyFeatures.png" alt="" class="Slideshow" />
                     </p>
                 </MadCap:slide>
                 <MadCap:slide title="Basic Steps">
@@ -52,8 +53,7 @@
                         </ul>
                     </div>
                     <div class="button-group center HomeWelcomeButtons">
-                        <div class="button black"><a href="A_Getting Started/Getting Started.htm" class="BlackText">Where Do I Begin?</a>
-                        </div>
+                        <div class="button black">Where Do I Begin?</div>
                         <div class="button black"><a href="A_Getting Started/Basic Steps.htm" class="BlackText">Basic Steps</a>
                         </div>
                     </div>
