--- a/Content/B_Links and Lists/LinksAndLists.htm
+++ b/Content/B_Links and Lists/LinksAndLists.htm
@@ -1,14 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="280" MadCap:lastWidth="1582">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="302" MadCap:lastWidth="1557">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1>
-            <MadCap:concept term="LinksLists" />
             <MadCap:keyword term="Links;Lists" />Links and Lists</h1>
         <p class="FirstPageOfChapter">Here is some general text for a topic. Replace this with your own content.</p>
-        <MadCap:snippetBlock src="../Resources/Snippets/MiniTOC.flsnp" MadCap:conditions="General.PDF" />
+        <MadCap:snippetBlock src="../Resources/Snippets/MiniTOC.flsnp" />
         <ul MadCap:conditions="General.Online">
             <li>(This list is conditioned for online output.)</li>
             <li>Here is a cross-reference link: See <MadCap:xref href="Links.htm">Links and Footnotes</MadCap:xref>.</li>
