--- a/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
+++ b/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
@@ -1,15 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="1722" MadCap:lastWidth="701">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="1418" MadCap:lastWidth="1570">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>
-            <MadCap:concept term="ConditionsBlockElementsTables" />
-            <MadCap:keyword term="Notes;Examples;Quotations" />Notes, Examples, and Quotations</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
-        <h2>Note With One Paragraph</h2>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <h1>ABCDEF</h1>
         <div class="note">
             <p class="noteInDiv" MadCap:autonum="&lt;b&gt;&lt;span style=&quot;color: #bed230;&quot; class=&quot;mcFormatColor&quot;&gt;Note: &lt;/span&gt;&lt;/b&gt;">Here is some general text for a note. Replace this with your own content.</p>
         </div>
