--- a/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
+++ b/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="1418" MadCap:lastWidth="1570">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="1418" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
