--- a/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
+++ b/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
@@ -1,24 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="1418" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="845" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1>ABCDEF</h1>
         <div class="note">
-            <p class="noteInDiv" MadCap:autonum="&lt;b&gt;&lt;span style=&quot;color: #bed230;&quot; class=&quot;mcFormatColor&quot;&gt;Note: &lt;/span&gt;&lt;/b&gt;">Here is some general text for a note. Replace this with your own content.</p>
+            <p class="noteInDiv">Here is some general text for a note. Replace this with your own content.</p>
         </div>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
         <h2>Note With Two Paragraphs</h2>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
         <div class="note">
-            <p class="noteInDiv" MadCap:autonum="&lt;b&gt;&lt;span style=&quot;color: #bed230;&quot; class=&quot;mcFormatColor&quot;&gt;Note: &lt;/span&gt;&lt;/b&gt;">Here is some general text for a note. Replace this with your own content.</p>
+            <p class="noteInDiv">Here is some general text for a note. Replace this with your own content.</p>
             <p>Here is some general text for a note. Replace this with your own content.</p>
         </div>
         <h2>Note With Three Paragraphs</h2>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
         <div class="note">
-            <p class="noteInDiv" MadCap:autonum="&lt;b&gt;&lt;span style=&quot;color: #bed230;&quot; class=&quot;mcFormatColor&quot;&gt;Note: &lt;/span&gt;&lt;/b&gt;">Here is some general text for a note. Replace this with your own content.</p>
+            <p class="noteInDiv">Here is some general text for a note. Replace this with your own content.</p>
             <p>Here is some general text for a note. Replace this with your own content.</p>
             <p>Here is some general text for a note. Replace this with your own content.</p>
         </div>
@@ -32,17 +32,8 @@
         <p> Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.</p>
         <p> Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.</p>
         <h2>Example With Multiple Paragraphs</h2>
-        <p> Here is some general text for a topic. Replace this with your own content.</p>
-        <div class="example">
-            <p class="ExampleHeadText">EXAMPLE</p>
-            <p>Here is some general text for an example. Replace this with your own content.</p>
-            <p>Here is some general text for an example. Replace this with your own content.</p>
-        </div>
+        <p>eczample</p>
         <h2>Quotation</h2>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
-        <div class="quotation">
-            <p>Here is some general text for a quotation. Replace this with your own content. Here is some general text for a quotation. Replace this with your own content. Here is some general text for a quotation. Replace this with your own content. Here is some general text for a quotation. Replace this with your own content."</p>
-            <p class="quotationname">—Quote Author Name │ <span class="Emphasis">Title or Company</span></p>
-        </div>
+        <p>kuotation</p>
     </body>
 </html>
