--- a/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
+++ b/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="845" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="652" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
@@ -23,14 +23,7 @@
             <p>Here is some general text for a note. Replace this with your own content.</p>
         </div>
         <h2>Example With One Paragraph</h2>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
-        <div class="example">
-            <p class="ExampleHeadText">EXAMPLE</p>
-            <p>Here is some general text for an example. Replace this with your own content.</p>
-        </div>
-        <p> Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.</p>
-        <p> Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.</p>
-        <p> Here is some general text for a topic. Replace this with your own content.  Here is some general text for a topic. Replace this with your own content.</p>
+        <p>eczample 1</p>
         <h2>Example With Multiple Paragraphs</h2>
         <p>eczample</p>
         <h2>Quotation</h2>
