--- a/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
+++ b/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
@@ -1,27 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="652" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="3" MadCap:lastHeight="466" MadCap:lastWidth="1570" MadCap:onlyLocalStylesheets="True">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1>ABCDEF</h1>
-        <div class="note">
-            <p class="noteInDiv">Here is some general text for a note. Replace this with your own content.</p>
-        </div>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <div class="note">eibici</div>
         <h2>Note With Two Paragraphs</h2>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
-        <div class="note">
-            <p class="noteInDiv">Here is some general text for a note. Replace this with your own content.</p>
-            <p>Here is some general text for a note. Replace this with your own content.</p>
-        </div>
+        <p>Note2</p>
         <h2>Note With Three Paragraphs</h2>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
-        <div class="note">
-            <p class="noteInDiv">Here is some general text for a note. Replace this with your own content.</p>
-            <p>Here is some general text for a note. Replace this with your own content.</p>
-            <p>Here is some general text for a note. Replace this with your own content.</p>
-        </div>
+        <p>Note1</p>
         <h2>Example With One Paragraph</h2>
         <p>eczample 1</p>
         <h2>Example With Multiple Paragraphs</h2>
