--- a/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
+++ b/Content/C_Conditions Notes Tables/NotesExamplesQuotations.htm
@@ -5,11 +5,11 @@
     </head>
     <body>
         <h1>ABCDEF</h1>
-        <div class="note">eibici</div>
+        <div class="note">eibici<MadCap:xref href="../B_Links and Lists/Links.htm">Links and Footnotes</MadCap:xref></div>
         <h2>Note With Two Paragraphs</h2>
-        <p>Note2</p>
+        <p>Note2<MadCap:xref href="../B_Links and Lists/LinksAndLists.htm">Links and Lists</MadCap:xref></p>
         <h2>Note With Three Paragraphs</h2>
-        <p>Note1</p>
+        <p>Note1<MadCap:xref href="../B_Links and Lists/Lists.htm">Lists</MadCap:xref></p>
         <h2>Example With One Paragraph</h2>
         <p>eczample 1</p>
         <h2>Example With Multiple Paragraphs</h2>
